Added support for multiple domains.
GLV-1.12556 can now host multiple "sites", each with its own configuration.
The configuration still has to be in a single file, but we can work on that
over time.

--- a/README
+++ b/README
@@ -14,6 +14,7 @@ Features:
 	* Gemini-specific CGI scripts
 	* HTTP-specific CGI scripts
 * Support for user directories
+* Support for vitual hosting (multiple domains)
 * Authentication by client certificates
 * Easily extensible with support for custom handlers
 * Configuration via file
