Add SCGI support.
This adds SCGI support to GLV-1.12556.  There's still some cleanup and
refinements that need to be done, but I want to get this out.  Real artists
ship, after all.

--- a/README
+++ b/README
@@ -13,6 +13,9 @@ Features:
 * Support for CGI
 	* Gemini-specific CGI scripts
 	* HTTP-specific CGI scripts
+* Support for SCGI
+	* Gemini-specific SCGI programs
+	* HTTP-specific SCGI programs
 * Support for user directories
 * Support for vitual hosting (multiple domains)
 * Authentication by client certificates
