--- a/README
+++ b/README
@@ -21,6 +21,8 @@ Features:
 * Support for serving up single files
 * Support for vitual hosting (multiple domains)
 * Support for specifying MIME type per file extension
+* Support for files in multiple human languages
+* Support for specifying non-UTF-8 character sets
 * Authentication by client certificates
 * Easily extensible with support for custom handlers
 
